# AI-Tennis-Coach

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tennis_coach/: config.py  logging_config.py
src/tennis_coach/analysis/: classification.py  features.py  reliability.py  segmentation.py  types.py
src/tennis_coach/feedback/: llm.py  prompts.py
src/tennis_coach/graph/: agent.py
src/tennis_coach/vision/: pose.py  skeleton.py
tests/: test_classification.py  test_config.py  test_reliability.py
